Fix styles and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ h3,
 h4,
 h5,
 h6 {
-  padding:0;
+  padding:10;
   margin:0;
   font-family: "Roboto", sans-serif;
 }
@@ -21,7 +21,7 @@ h6 {
 .education-entry,
 .work-entry,
 .project-entry {
-  padding: 0 5%;
+  padding:10px 5%;
 }
 
 h1 {
@@ -36,7 +36,7 @@ h2 {
   font-size: 24px;
   color: #999;
   line-height: 29px;
-  padding: 10px;
+  padding-top: 15px;
 }
 
 h3 {
@@ -53,8 +53,6 @@ h4 {
   line-height: 17px;
 }
 
-h2,
-h3,
 h4,
 h5 {
   padding:10px 5%;
@@ -67,7 +65,6 @@ h5 {
   font-size: 14px;
   color: #999;
   line-height: 16px;
-  float: left;
 }
 
 .location-text {
@@ -89,7 +86,6 @@ a {
   color: #1199c3;
   text-decoration: none;
   margin-top: 10px;
-  display: block;
 }
 
 .welcome-message {
@@ -121,6 +117,16 @@ a {
   background-color: #f3f3f3;
   padding-bottom: 10px;
   clear:both;
+  padding-left: 58px;
+  padding-right: 58px;
+}
+
+.white {
+  background-color: #ffffff;
+  padding-bottom: 15px;
+  clear:both;
+  padding-left: 58px;
+  padding-right: 58px;
 }
 
 .dark-gray {
@@ -151,13 +157,15 @@ ul {
 
 .biopic {
   float: left;
-  padding: 10px;
+  padding-right: 10px;
   width: 200px;
   display: none;
 }
 
 img {
-  padding: 10px;
+  float: left;
+  padding-right: 10px;
+  width: 50px;
 }
 
 span {
